--- a/CONFIG_TEMPLATE.env
+++ b/CONFIG_TEMPLATE.env
@@ -1,38 +1,62 @@
 # ========================================
-# Game Admin Server Configuration
+# GAME ADMIN SERVER - COMPLETE ENVIRONMENT CONFIGURATION
 # ========================================
 # Copy this file to .env and fill in your values
+# ALL configuration is environment-driven - NO hardcoded values in code
 
 # ========================================
-# Server Configuration
+# SERVER CONFIGURATION
 # ========================================
+# Server port (default: 3000)
 PORT=3000
+
+# Environment mode (development/production)
+# CRITICAL: Set to 'development' for local testing, 'production' for deployment
 NODE_ENV=development
-FRONTEND_URL=http://localhost:5173
 
 # ========================================
-# Session Secret
+# FRONTEND CONFIGURATION
 # ========================================
-# Generate a random string for production!
-# You can use: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+# Main frontend URL (where your dashboard is hosted)
+# For local development: http://localhost:5174
+# For production: https://yourdomain.com
+FRONTEND_URL=http://localhost:5174
+
+# Additional allowed origins (comma-separated, optional)
+# Use this for multiple domains or subdomains
+# Example: https://app.yourdomain.com,https://admin.yourdomain.com
+ADDITIONAL_ORIGINS=
+
+# ========================================
+# SESSION CONFIGURATION
+# ========================================
+# Session secret - REQUIRED! Generate a secure random string
+# Generate one with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
 SESSION_SECRET=your-super-secret-session-key-change-this-in-production
 
+# Session timeout in milliseconds (default: 24 hours)
+SESSION_MAX_AGE=86400000
+
+# Session domain (optional, leave empty for auto-detection)
+# For development: localhost
+# For production: .yourdomain.com (note the leading dot)
+SESSION_DOMAIN=
+
 # ========================================
-# Root User Credentials
+# ROOT USER CREDENTIALS
 # ========================================
-# This is the main admin account
-# Change these before first use!
+# Main admin account - CHANGE THESE!
 ROOT_USERNAME=root
 ROOT_EMAIL=root@admin.com
 ROOT_PASSWORD=root123
 
 # ========================================
-# AWS S3 Configuration
+# AWS S3 CONFIGURATION
 # ========================================
 # Get these from AWS IAM Console:
-# 1. Create an IAM user
-# 2. Attach S3 permissions policy
-# 3. Generate access keys
+# 1. Create an IAM user with S3 permissions
+# 2. Generate access keys
+# 3. Create S3 bucket for game assets
 
 AWS_REGION=us-east-1
 AWS_ACCESS_KEY_ID=AKIAXXXXXXXXXXXXXXXX
@@ -40,16 +64,14 @@ AWS_SECRET_ACCESS_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 AWS_S3_BUCKET=your-game-bucket-name
 
 # ========================================
-# CloudFront URL (Optional but Recommended)
+# CLOUDFRONT CONFIGURATION (Optional)
 # ========================================
-# If using CloudFront for faster delivery:
-# CLOUDFRONT_URL=https://dxxxxxxxxxxxxx.cloudfront.net
-# 
-# If NOT using CloudFront, comment out or leave empty:
-CLOUDFRONT_URL=
+# If using CloudFront for CDN and faster delivery
+# Leave empty if not using CloudFront
+CLOUDFRONT_URL=https://dxxxxxxxxxxxxx.cloudfront.net
 
 # ========================================
-# File Upload Settings
+# FILE UPLOAD SETTINGS
 # ========================================
 # Max file size in bytes (default: 50MB)
 MAX_FILE_SIZE=52428800
