--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "node --watch server.js"
+    "dev": "node --watch server.js",
+    "upload-social-icons": "node upload-social-icons-to-s3.js",
+    "migrate-games": "node migrate-games-to-ranking.js"
   },
   "dependencies": {
     "express": "^4.18.2",
